--- a/src/components/Write/Write.scss
+++ b/src/components/Write/Write.scss
@@ -31,8 +31,7 @@
           box-sizing: border-box;
           width: 100%;
           height: 50px;
-          background: #ffffff;
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+          background: #fcf6f5;
           border: none;
           border-radius: 10px;
           padding: 0.3rem 0.5rem;
@@ -52,8 +51,6 @@
         width: 150px;
         height: 150px;
         box-sizing: border-box;
-        border-radius: 30px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
         &-img {
           width: 150px;
           height: 150px;
@@ -69,8 +66,7 @@
           width: 100%;
           height: 100%;
           box-sizing: border-box;
-          background: #ffffff;
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+          background: #fcf6f5;
           border: none;
           border-radius: 10px;
           padding: 1rem 1rem;
