--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -54,7 +54,7 @@
             font-family: Noto Sans CJK KR;
             font-style: normal;
             font-weight: 600;
-            background-color: #8aaae5;
+            background-color: #7e7e7e;
             color: white;
           }
         }
