--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -64,20 +64,20 @@
   }
 }
 .buy {
-  background-color: #8aaae5;
+  background-color: #8aaae5 !important;
 }
 
 .gift {
-  background-color: #2bae66;
+  background-color: #2bae66 !important;
 }
 .end {
-  background-color: #7d5fff;
+  background-color: #7d5fff !important;
 }
 .buyEnd {
-  background-color: #f96167;
+  background-color: #f96167 !important;
 }
 .giftEnd {
-  background-color: #fce77d;
+  background-color: #fce77d !important;
 }
 .check {
   background: white;
