--- a/src/components/Write/Write.scss
+++ b/src/components/Write/Write.scss
@@ -51,10 +51,14 @@
         width: 150px;
         height: 150px;
         box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         &-img {
           width: 150px;
           height: 150px;
           box-sizing: border-box;
+          margin-bottom: 10px;
         }
       }
       &-textDiv {
@@ -115,6 +119,7 @@
             color: white;
             border-radius: 15px;
             font-size: 15px;
+            background-color: #bcbcbc;
             font-family: Noto Sans CJK KR;
             font-style: normal;
             font-weight: 600;
@@ -166,4 +171,11 @@
       text-align: center;
     }
   }
+}
+
+label {
+  font-size: 16px;
+  font-family: Noto Sans CJK KR;
+  font-style: normal;
+  font-weight: 600;
 }
